--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thi-online-ptit-by-aisoft",
+  "name": "tra-cuu-ptit",
   "appId": "org.electron.thi-online",
   "version": "1.0.0",
   "buildVersion": "0004",
@@ -78,7 +78,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lanten/electron-antd.git"
+    "url": "https://github.com/chinhpro2k/research-electron-project"
   },
   "bugs": {
     "url": "https://github.com/lanten/electron-antd/issues"
@@ -88,12 +88,15 @@
     "@ant-design/icons": "^4.7.0",
     "@react-keycloak/web": "^3.4.0",
     "@types/humps": "^2.0.1",
+    "@types/react-pdf": "^5.7.2",
+    "@types/styled-components": "^5.1.26",
     "audio-react-recorder": "^1.0.4",
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "drivelist": "^9.2.4",
+    "electron-is-dev": "^2.0.0",
     "electron-log": "^4.3.2",
-    "electron-updater": "^4.3.9",
+    "electron-updater": "^4.6.5",
     "electron-virtual-keyboard": "^1.0.7",
     "face-api.js": "^0.22.2",
     "humps": "^2.0.1",
@@ -105,9 +108,11 @@
     "node-fetch": "^2.6.1",
     "qs": "^6.11.0",
     "react": "^17.0.2",
+    "react-devtools-electron": "^4.7.0",
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.7.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-simple-keyboard": "^3.4.189",
@@ -116,6 +121,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "remixicon": "^2.5.0",
+    "styled-components": "^5.3.5",
     "update-electron-app": "^2.0.1",
     "usb-detection": "^4.10.0",
     "webpack-node-externals": "^3.0.0"
